--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "heroku": "^7.18.9",
     "leaflet": "^1.3.4",
     "mapbox-gl": "^0.51.0-beta.2"
   }
