--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^3.0.0",
     "heroku": "^7.18.9",
     "leaflet": "^1.3.4",
-    "mapbox-gl": "^0.51.0-beta.2"
+    "mapbox-gl": "^0.51.0-beta.2",
+    "pandas-js": "^0.2.4"
   }
 }
